--- a/css/elegant-fonts.css
+++ b/css/elegant-fonts.css
@@ -15,7 +15,7 @@
 	content: attr(data-icon);
 	speak: none;
 	font-weight: normal;
-	font-variant: normal;
+	font-variant: normal;q
 	text-transform: none;
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
